--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Hector Garzon <hferney@technisys.com>",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
