--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "inquirer": "^9.0.2",
+    "uuid": "^8.3.2",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
