--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "colors": "^1.4.0",
     "inquirer": "^9.0.2",
     "uuid": "^8.3.2",
