--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "colors": "^1.4.0",
+    "dotenv": "^16.0.1",
     "inquirer": "^9.0.2",
     "uuid": "^8.3.2",
     "yargs": "^17.5.1"
