--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
