--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "inquirer": "^9.0.2",
     "uuid": "^8.3.2",
     "yargs": "^17.5.1"
