--- a/package.json
+++ b/package.json
@@ -13,13 +13,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "hbs": "^4.2.0",
-    "inquirer": "^9.0.2",
-    "uuid": "^8.3.2",
-    "yargs": "^17.5.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
